fixed nav alignment on mobile

--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ nav ul {
 }
 nav ul li {
 	display: inline;
-	margin: 0.5em;
+	margin: auto 0.5em;
 }
 nav i {
 	margin-right: 0.5em;
@@ -367,7 +367,7 @@ section#prednosti { /* statistika - "Prednosti tutorstva" */
 }
 
 /* OZKI EKRANI - mobile view */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 820px) {
 	.desktop {
 		display: none;
 	}
